--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
         <fieldset class="ad-form__element">
           <label class="ad-form__label" for="type">Тип жилья</label>
           <select id="type" name="type">
-            <option value="bungalo">Бунгало</option>
-            <option value="flat" selected>Квартира</option>
+            <option value="bungalo" selected>Бунгало</option>
+            <option value="flat">Квартира</option>
             <option value="house">Дом</option>
             <option value="palace">Дворец</option>
           </select>
@@ -127,7 +127,7 @@
 
         <fieldset class="ad-form__element">
           <label class="ad-form__label" for="price">Цена за ночь, руб.</label>
-          <input id="price" name="price" type="number" placeholder="5000" min="0" max="1000000">
+          <input id="price" name="price" type="number" placeholder="0" min="0" max="1000000" required>
         </fieldset>
 
         <fieldset class="ad-form__element ad-form__element--time">
