--- a/index.html
+++ b/index.html
@@ -257,9 +257,9 @@
   </template>
 
   <script src="js/utils.js"></script>
-  <script src="js/advert.js"></script>
-  <script src="js/cards.js"></script>
-  <script src="js/pins.js"></script>
+  <script src="js/data.js"></script>
+  <script src="js/card.js"></script>
+  <script src="js/pin.js"></script>
   <script src="js/form.js"></script>
   <script src="js/pinMain.js"></script>
   <script src="js/map.js"></script>
