--- a/index.html
+++ b/index.html
@@ -257,6 +257,7 @@
   </template>
 
   <script src="js/backend.js"></script>
+	<script src="js/failure-message.js"></script>
   <script src="js/utils.js"></script>
   <script src="js/card.js"></script>
   <script src="js/pin.js"></script>
