--- a/index.html
+++ b/index.html
@@ -257,9 +257,10 @@
   </template>
 
   <script src="js/backend.js"></script>
-	<script src="js/failure-message.js"></script>
+  <script src="js/failure-message.js"></script>
   <script src="js/utils.js"></script>
   <script src="js/card.js"></script>
+  <script src="js/filters.js"></script>
   <script src="js/pin.js"></script>
   <script src="js/form.js"></script>
   <script src="js/pinMain.js"></script>
